2012-07-08  Charlie Zender  <zender@uci.edu>

	* Apply bugfix from Roux so ncra always averages coordinate variables

2012-07-06  Charlie Zender  <zender@uci.edu>

	* Use strcasestr() instead of strstr() for fl_fmt conversions

	* Die when netCDF4 output explicitly requested from netCDF3-only NCO

	* Fix -? ... command line option help in nco_ctl.c

2012-07-05  Pedro Vicente  <pvicente@uci.edu>

        * Build doc/Makefile iff 'makeinfo' program is installed (TODO nco1056)

2012-07-05  Charlie Zender  <zender@uci.edu>

	* Update man pages

2012-07-03  Charlie Zender  <zender@uci.edu>

	* Document --ram and --no_tmp_fl switches

	* Un-break strtoll() compatibility function for AIX xlC

	* Make MSVC file opening Sleep() for same duration as UNIX sleep()

	* Write MSVC lround(),llround(),llround(),llroundf() definitions to obey standard prototypes
	Move their definitions/declarations to nco_rth_flt.[ch]

	* NCO 4.2.1 release procedure:
 	Changes since nco-4_2_0: no_tmp_fl, NC_DISKLESS
	cd ~/nco;cvs tag -d nco-4_2_1;cvs tag -d nco-4_2_1-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.1 release"
	cvs tag -c nco-4_2_1;cvs tag -c nco-4_2_1-1

2012-07-02  Pedro Vicente  <pvicente@uci.edu>

        * Print $prefix (NCO installation path) in configure output

2012-07-02  Henry Butowsky  <henryb@hush.com>

	* Add exists(var_nm/att_nm) function to return 1 if "var" or "att" exist in Input or Output

2012-07-01  Pedro Vicente  <pvicente@uci.edu>

        * Test for presence of antlr in configure, and if not found, do not build ncap2

2012-06-30  Charlie Zender  <zender@uci.edu>

	* Use nco_fl_open() instead of nco_open() in ncap2

2012-06-28  Charlie Zender  <zender@uci.edu>

	* Harmonize _FillValue with variable type in in.cdl (backwards compatibility with netCDF 4.1.1)

	* Remove NaN values from in.cdl for backwards compatibility (netCDF 4.1.1 does not support)

	* Fix ncks netCDF4 backwards compatibility problem by using #ifdef ENABLE_NETCDF4
